[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"


[lib]
crate-type = ["cdylib"]

[[bin]]
name = "duid-serve"
path = "src/tools/serve.rs"

[[bin]]
name = "duid-build"
path = "src/tools/build.rs"

[[bin]]
name = "duid-deploy"
path = "src/tools/deploy.rs"

[features]


[dependencies]
wasm-bindgen = "0.2"
duid-app = {version = "0.1.0", git = "https://github.com/djedou/duid-app", branch="develop"}
tokio = {version = "1.26", features = ["macros", "rt-multi-thread", "rt", "net"]}
clap = {version = "4.0", features = ["derive", "cargo"]  }



[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
debug = true
lto = true
opt-level = "s"