[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"


[lib]
crate-type = ["cdylib"]

[features]


[dependencies]
wasm-bindgen = "0.2"
duid-app = {version = "0.1.0", git = "https://github.com/djedou/duid-app", branch="develop"}
clap = {version = "4.0", features = ["derive", "cargo"]  }



[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
debug = true
lto = true
opt-level = "s"